# cpp-yet-another-web-framework

./: .gitignore  CMakeLists.txt  Dockerfile  clang-toolchain.cmake  linux-clang-triplet.cmake  main.cpp  vcpkg.json  zserver.h
include/cppdantic/: domain.h  json2obj.h  obj2json.h  valdatable_types.h
include/serialization/: cppdantic.h
include/server/: zserver.h
src/: json2obj.cpp  obj2json.cpp  zserver.cpp
